Added machines/destroy call.
