# api-definitions/0.1.3/paperspace-api-swagger-definition.json
@@ -152,6 +152,33 @@
         }
       }
     },
+    "/machines/{machineId}/destroyMachine": {
+      "post": {
+        "operationId": "destroyMachine",
+        "tags": [
+          "machines"
+        ],
+        "summary": "Destroy a machine",
+        "description": "Destroy the machine with the given id. When this action is performed, the machine is immediately shut down and marked for deletion from the datacenter. Any snapshots that were derived from the machine are also deleted. Access to the machine is terminated immediately and billing for the machine is prorated to the hour. This action can only be performed by the user who owns the machine, or in the case of a team, the team administrator.",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "machineId",
+            "description": "The id of the machine to destroy",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Success"
+          },
+          "404": {
+            "description": "Machine not found"
+          }
+        }
+      }
+    },
     "/templates/getTemplates": {
       "get": {
         "operationId": "listTemplates",
